--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1); */
 }
 
 .header-group {
