--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,11 @@
-#root {
+:root {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   background-color: rgb(243, 244, 246);
-  height: 100vh;
-  width: 100vw;
+}
+
+#root {
+  margin: 0 auto;
+  /* padding: 2rem; */
 }
