--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,10 +1,10 @@
-.education {
+.experience {
   display: flex;
   flex-direction: column;
   /* box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1); */
 }
 
-.education-header-group {
+.experience-header-group {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -13,7 +13,7 @@
   height: fit-content;
   padding: 20px;
   /* border-top-right-radius: 10px;
-  border-top-left-radius: 10px; */
+    border-top-left-radius: 10px; */
   border-radius: 10px;
 }
 
@@ -91,11 +91,11 @@
   cursor: pointer;
 }
 
-.editSchool {
+.editExperience {
   margin-top: 0px;
 }
 
-.educations {
+.experiences {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -108,11 +108,11 @@
   border-radius: 10px;
 }
 
-.school-title {
+.experience-title {
   margin: 0;
 }
 
-.add-education {
+.add-experience {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -123,11 +123,11 @@
   margin-top: 5px;
   align-items: center;
   /* border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px; */
+    border-bottom-right-radius: 10px; */
   border-radius: 10px;
 }
 
-.add-education-button {
+.add-experience-button {
   border: none;
   background-color: gray;
   color: white;
@@ -137,12 +137,12 @@
   font-weight: 400;
 }
 
-.add-education-button:hover {
+.add-experience-button:hover {
   background-color: rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
 
-.education-content {
+.experience-content {
   display: flex;
   flex-direction: column;
   gap: 0;
