Add skillsTemplate component

--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -50,12 +50,12 @@
 .button {
   margin-top: 10px;
   border: none;
-  padding: 10px 20px;
+  padding: 7.5px 12.5px;
+  background-color: gray;
   color: white;
-  border-radius: 10px;
-  font-weight: 500;
+  border-radius: 5px;
+  font-weight: 400;
   font-size: 14px;
-  background-color: black;
 }
 
 .button-general-div {
@@ -65,7 +65,7 @@
 
 .button:hover {
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .expand-icon {
