--- a/src/styles/SkillsTemplate.css
+++ b/src/styles/SkillsTemplate.css
@@ -1,11 +1,11 @@
-.experience-template {
+.skills-template {
   width: calc(100% - 112px);
   padding: 0 56px;
   margin-top: 40px;
   margin-bottom: 0;
 }
 
-.experience-header {
+.skills-header {
   font-weight: 500px;
   color: gray;
   background-color: #f3f4f6;
@@ -15,18 +15,35 @@
   border-radius: 2px;
 }
 
-.experience-header h3 {
+.skills-header h3 {
   margin: 0;
 }
 
-.experience-template-content {
+.skills-template-content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
   margin-top: 20px;
+  font-size: 14px;
 }
 
-.experience-unit {
+.skills-intro {
+  margin: 0;
+  font-weight: 800;
+}
+
+.skills-div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.skill-unit {
+  margin: 0;
+  margin-right: 5px;
+}
+
+.skills-unit {
   display: grid;
   grid-template-columns: 2fr 1fr;
   font-size: 14px;
