--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -55,7 +55,7 @@
   color: white;
   border-radius: 5px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .button-general-div {
@@ -76,18 +76,23 @@
   width: fit-content;
 }
 
-/* .editBtn {
-  display: flex;
-  justify-content: space-between;
+.editBtn {
+  margin-top: 10px;
+  border: none;
+  padding: 7.5px 12.5px;
+  background-color: gray;
+  color: white;
+  border-radius: 5px;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .editSVG {
   height: 0px;
   width: 3px;
   transform: scale(0.75);
-} */
-
-.fa-solid,
+}
+*/ .fa-solid,
 .fas {
   transform: scale(0.8);
 }
