--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -3,7 +3,30 @@
   padding: 0;
   font-family: ui-sans-sarif, system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-  color: #2f313f;
+}
+
+.download-button {
+  background-color: #32bb78;
+  color: #ffffff;
+}
+
+.clear-button {
+  background-color: #32bb78;
+  color: #ffffff;
+}
+
+.button {
+  background-color: #32bb78;
+  color: #ffffff;
+}
+
+.add-education-button {
+  background-color: #32bb78;
+  color: #ffffff;
+}
+
+.edit-btn {
+  color: #32bb78;
 }
 
 .landing-header {
@@ -11,7 +34,8 @@
   justify-content: space-between;
   flex-direction: row;
   height: 75px;
-  padding: 0 24px;
+  padding: 0 30px;
+  box-shadow: 0px 4px 6px -6px rgba(0, 0, 0, 0.4);
 }
 .landing-logo {
   align-items: center;
@@ -49,8 +73,25 @@
   font-size: 16px;
 }
 
+.landing-content {
+  display: flex;
+  height: calc(100vh - 75px);
+  width: 100vw;
+  flex-direction: row;
+  padding: 0 40px;
+  gap: 5%;
+}
+
+.hero-text {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10%;
+}
+
 .hero-title {
   font-size: 64px;
+  margin-bottom: 2rem;
 }
 
 .hero-subtitle {
@@ -59,7 +100,7 @@
   font-weight: 400;
 }
 
-.button {
+.landing-button {
   font-weight: 600;
   padding: 18px 24px;
   border-radius: 25px;
@@ -67,8 +108,22 @@
   text-decoration: none;
   background-color: #32bb78;
   color: #ffffff;
+  width: fit-content;
 }
 
 .cta {
   background-color: #32bb78;
+}
+
+.hero-img-div {
+  height: 100%;
+  width: 50%;
+  overflow: hidden;
+}
+
+.hero-img {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  width: 100%;
 }
