Change button colors

--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -53,8 +53,8 @@
   margin-top: 10px;
   border: none;
   padding: 7.5px 12.5px;
-  background-color: gray;
-  color: white;
+  background-color: #32bb78;
+  color: #ffffff;
   border-radius: 5px;
   font-weight: 400;
   font-size: 14px;
@@ -66,8 +66,9 @@
 }
 
 .button:hover {
+  background-color: rgb(44, 165, 106);
+  color: #ffffff;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .expand-icon {
@@ -79,15 +80,16 @@
 }
 
 .editBtn {
-  background-color: white;
-  color: gray;
+  color: #32bb78;
+  background-color: #ffffff;
   border: none;
   transform: scale(1.6);
   padding: 0px 0px;
 }
 
 .editBtn:hover {
-  color: rgba(0, 0, 0, 0.4);
+  color: rgb(44, 165, 106);
+  background-color: #ffffff;
   cursor: pointer;
 }
 
@@ -129,8 +131,8 @@
 
 .add-skill-button {
   border: none;
-  background-color: gray;
-  color: white;
+  background-color: #32bb78;
+  color: #ffffff;
   padding: 10px 15px;
   border-radius: 5px;
   font-size: 14px;
@@ -138,7 +140,8 @@
 }
 
 .add-skill-button:hover {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgb(44, 165, 106);
+  color: #ffffff;
   cursor: pointer;
 }
 
