--- a/src/styles/EducationForm.css
+++ b/src/styles/EducationForm.css
@@ -41,8 +41,8 @@
   margin-top: 10px;
   border: none;
   padding: 7.5px 12.5px;
-  background-color: #32bb78;
-  color: #ffffff;
+  background-color: gray;
+  color: white;
   border-radius: 5px;
   font-weight: 400;
   font-size: 14px;
@@ -61,15 +61,14 @@
 }
 
 .button:hover {
-  background-color: rgb(44, 165, 106);
-  color: #ffffff;
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .deleteBtn {
   border: none;
-  color: #32bb78;
-  background-color: #ffffff;
+  background-color: white;
+  color: gray;
   padding: 0px 0px;
   transform: scale(1.6);
   margin-top: 10px;
@@ -77,6 +76,6 @@
 }
 
 .deleteBtn:hover {
-  color: rgb(44, 165, 106);
+  color: rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
