--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -51,8 +51,8 @@
   margin-top: 10px;
   border: none;
   padding: 7.5px 12.5px;
-  background-color: #32bb78;
-  color: #ffffff;
+  background-color: gray;
+  color: white;
   border-radius: 5px;
   font-weight: 400;
   font-size: 14px;
@@ -64,9 +64,8 @@
 }
 
 .button:hover {
-  background-color: rgb(44, 165, 106);
-  color: #ffffff;
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .expand-icon {
